rename other files

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a data-goto=".page__projects" href="vsi-proekty" class="menu__link __hover"> Проекти </a> </li>
-                                <li> <a data-goto=".page__about-us" href="pro-nas" class="menu__link __hover"> Про нас </a> </li>
+                                <li> <a data-goto=".page__projects" href="all-projects" class="menu__link __hover"> Проекти </a> </li>
+                                <li> <a data-goto=".page__about-us" href="about-us" class="menu__link __hover"> Про нас </a> </li>
                                 <li> <a data-goto=".page__contacts" href="contacts" class="menu__link __hover"> Контакти </a> </li>
                                 <li> <a href="en" class="__hover"> En </a> </li>
                                 <li>    
@@ -168,7 +168,7 @@
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
-                            <a href="vsi-proekty" class="more-btn-text"> Більше проектів </a>
+                            <a href="all-projects" class="more-btn-text"> Більше проектів </a>
                         </div>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
-                            <a href="pro-nas" class="more-btn-text">Про нас</a>                            
+                            <a href="about-us" class="more-btn-text">Про нас</a>                            
                         </div>                       
                     </div>
                 </div>
