--- a/project/warning.html
+++ b/project/warning.html
@@ -41,8 +41,8 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="../vsi-proekty" class="__hover"> Проекти </a> </li>
-                                <li> <a href="../pro-nas" class="__hover"> Про нас </a> </li>
+                                <li> <a href="../all-projects" class="__hover"> Проекти </a> </li>
+                                <li> <a href="../about-us" class="__hover"> Про нас </a> </li>
                                 <li> <a href="../contacts" class="__hover"> Контакти </a> </li>
                                 <li> <a href="../en/project/warning" class="__hover"> En </a> </li>
                                 <li> 
@@ -82,7 +82,7 @@
                         <h3> Ця сторінка знаходиться на стадії розробки </h3>
                         <p> Наш новий веб-сайт буде запущено зовсім скоро </p>
                         <p> Поверніться незабаром та перевірте ще раз </p>
-                        <a href="../vsi-proekty" class="prev-btn"> Попередня сторінка </a>
+                        <a href="../all-projects" class="prev-btn"> Попередня сторінка </a>
                     </div>
                 </div>                      
             </div>
