--- a/about-us.html
+++ b/about-us.html
@@ -45,8 +45,8 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="vsi-proekty" class="__hover"> Проекти </a> </li>
-                                <li> <a href="pro-nas" class="projects-link __hover"> Про нас </a> </li>
+                                <li> <a href="all-projects" class="__hover"> Проекти </a> </li>
+                                <li> <a href="about-us" class="projects-link __hover"> Про нас </a> </li>
                                 <li> <a href="contacts" class="__hover"> Контакти </a> </li>
                                 <li> <a href="en/about-us" class="__hover"> En </a> </li>
                                 <li> 
