--- a/project/school-brovary.html
+++ b/project/school-brovary.html
@@ -47,8 +47,8 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="../vsi-proekty" class="__hover"> Проекти </a> </li>
-                                <li> <a href="../pro-nas" class="__hover"> Про нас </a> </li>
+                                <li> <a href="../all-projects" class="__hover"> Проекти </a> </li>
+                                <li> <a href="../about-us" class="__hover"> Про нас </a> </li>
                                 <li> <a href="../contacts" class="__hover"> Контакти </a> </li>
                                 <li> <a href="../en/project/school-brovary" class="__hover"> En </a> </li>
                                 <li> 
