changed professions to feminitives

--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/MS1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Марина Савчук 
-                                <p class="emp-block__position"> Фінансовий директор 
+                                <p class="emp-block__position"> Фінансова директорка 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/AG1.JPG" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Аліна Григорян 
-                                <p class="emp-block__position"> Головний архітектор 
+                                <p class="emp-block__position"> Головна архітекторка 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/MF1.jpg" alt="" class="emp-block__photo">
@@ -224,12 +224,12 @@
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/TK1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Тетяна Козак 
-                                <p class="emp-block__position"> Архітектор 
+                                <p class="emp-block__position"> Архітекторка 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/KB1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Катерина Бондаренко 
-                                <p class="emp-block__position"> Архітектор 
+                                <p class="emp-block__position"> Архітекторка 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/VS1.jpg" alt="" class="emp-block__photo">
@@ -239,7 +239,7 @@
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/SL1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Лідія Шаталіна 
-                                <p class="emp-block__position"> Фінансист
+                                <p class="emp-block__position"> Фінансистка
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
