--- a/about-us.html
+++ b/about-us.html
@@ -149,12 +149,12 @@
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/MS1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Марина Савчук </p>
-                                <p class="emp-block__position"> Фінансовий директор </p>
+                                <p class="emp-block__position"> Фінансова директорка </p>
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/AG1.JPG" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Аліна Григорян </p>
-                                <p class="emp-block__position"> Головний архітектор </p>
+                                <p class="emp-block__position"> Головна архітекторка </p>
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/MF1.jpg" alt="" class="emp-block__photo">
@@ -164,12 +164,12 @@
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/TK1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Тетяна Козак </p>
-                                <p class="emp-block__position"> Архітектор </p>
+                                <p class="emp-block__position"> Архітекторка </p>
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/KB1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Катерина Бондаренко </p>
-                                <p class="emp-block__position"> Архітектор </p>
+                                <p class="emp-block__position"> Архітекторка </p>
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/VS1.jpg" alt="" class="emp-block__photo">
@@ -179,7 +179,7 @@
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/SL1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Лідія Шаталіна </p>
-                                <p class="emp-block__position"> Фінансист </p>
+                                <p class="emp-block__position"> Фінансистка </p>
                             </div>
                         </div>
                     </div>
