changed some professions name in ukrainian

--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/AK1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Анна Кирій
-                                <p class="emp-block__position"> Власниця 
+                                <p class="emp-block__position"> Засновниця 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/MS1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Марина Савчук 
-                                <p class="emp-block__position"> Фінансова директорка 
+                                <p class="emp-block__position"> Виконавча директорка 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/AG1.JPG" alt="" class="emp-block__photo">
