--- a/about-us.html
+++ b/about-us.html
@@ -144,12 +144,12 @@
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/AK1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Анна Кирій </p>
-                                <p class="emp-block__position"> Власниця </p>
+                                <p class="emp-block__position"> Засновниця </p>
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/MS1.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name"> Марина Савчук </p>
-                                <p class="emp-block__position"> Фінансова директорка </p>
+                                <p class="emp-block__position"> Виконавча директорка </p>
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/AG1.JPG" alt="" class="emp-block__photo">
