add slider in Bandery project

--- a/en/all-projects.html
+++ b/en/all-projects.html
@@ -170,8 +170,8 @@
                             </div>
                             <div class="project__bandery project__content public">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="../assets/pic/07_bandery_11/front-bandery-11.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="../assets/pic/07_bandery_11/front-bandery-11-bw.jpg" class="project__photo"></a>
+                                    <a href="project/administr-complex-bandery"><img src="../assets/pic/07_bandery_11/front-bandery-11.jpg" class="project__photo-hover"></a>
+                                    <a href="project/administr-complex-bandery"><img src="../assets/pic/07_bandery_11/front-bandery-11-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="../assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
