--- a/en/project/administr-complex-bandery.html
+++ b/en/project/administr-complex-bandery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +7,17 @@
     <meta name="description" content="Anna Kyrii Architectural Projecting Group">
     <meta name="keywords" content="architecture, project, projects, Anna Kyrii, architect, architectural group, architectural design">
     <meta name="author" content="Anna Kyrii Architectural Projecting Group">
-    <link rel="stylesheet" href="../assets/style/preloader.css">
-    <link rel="stylesheet" href="../assets/style/normalize.css">
-    <link rel="stylesheet" href="../assets/style/style.css"> 
-    <link rel="stylesheet" href="../assets/style/style_projects.css"> 
-    <link rel="stylesheet" href="../assets/style/style_about-us.css"> 
+    <link rel="stylesheet" href="../../assets/style/preloader.css">
+    <link rel="stylesheet" href="../../assets/style/normalize.css">
+    <link rel="stylesheet" href="../../assets/style/style.css"> 
+    <link rel="stylesheet" href="../../assets/style/style_projects.css"> 
+    <link rel="stylesheet" href="../../assets/style/style_about-us.css"> 
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="style/project-slider-style.css"> 
-    <link rel="stylesheet" href="../assets/style/media.css"> 
+    <link rel="stylesheet" href="../../assets/style/media.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Anna Kyrii</title>
-    <link rel="icon" type="image/png" href="../assets/pic/00_general/logo_new.png">
+    <link rel="icon" type="image/png" href="../../assets/pic/00_general/logo_new.png">
 </head>
 <body>
 <!-- <body class="no-scroll-y">
@@ -38,7 +38,7 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="../" class="header_logo-pic"><img src="../assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="../" class="header_logo-pic"><img src="../../assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
                         <a href="../" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <div class="header__menu menu">
@@ -47,10 +47,10 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="../all-projects" class="__hover"> Проекти </a> </li>
-                                <li> <a href="../about-us" class="__hover"> Про нас </a> </li>
-                                <li> <a href="../contacts" class="__hover"> Контакти </a> </li>
-                                <li> <a href="../en/project/school-brovary" class="__hover"> En </a> </li>
+                                <li> <a href="../all-projects" class="__hover"> Projects </a> </li>
+                                <li> <a href="../about-us" class="__hover"> About us </a> </li>
+                                <li> <a href="../contacts" class="__hover"> Contacts </a> </li>
+                                <li> <a href="../../project/administr-complex-bandery" class="__hover"> Ua </a> </li>
                                 <li> 
                                     <div class="menu__icons">
                                         <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" target="_blank" class="icon">
@@ -89,124 +89,74 @@
                             <div class="image-slider__wrapper swiper-wrapper">                               
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_01.jpg" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_01.jpg" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_2_ua.png" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/06_02_en.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_03.png" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_03.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_04.png" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_04.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_05.png" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_05.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_06.png" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_06.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_07.png" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_07.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_08.png" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_08.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_09.jpg" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_09.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_10.jpg" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_10.jpg" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_11.jpg" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_11.jpg" alt="" >
                                     </div>                                
-                                </div>
+                                </div>                                                    
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_12.jpg" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_12.jpg" alt="" >
                                     </div>                                
-                                </div>
+                                </div>                                                    
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_13.jpg" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_13.jpg" alt="" >
                                     </div>                                
-                                </div>
+                                </div>                                                    
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_14.jpg" alt="" >
+                                        <img src="../../assets/pic/07_bandery_11/slider/07_14.jpg" alt="" >
                                     </div>                                
-                                </div>
-                                <div class="image-slider__slide swiper-slide">
-                                    <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_15.jpg" alt="" >
-                                    </div>                                
-                                </div>
-                                <div class="image-slider__slide swiper-slide">
-                                    <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_16.jpg" alt="" >
-                                    </div>                                
-                                </div>
-                                <div class="image-slider__slide swiper-slide">
-                                    <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_17.jpg" alt="" >
-                                    </div>                                
-                                </div>
-                                <div class="image-slider__slide swiper-slide">
-                                    <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_18.jpg" alt="" >
-                                    </div>                                
-                                </div>
-                                <div class="image-slider__slide swiper-slide">
-                                    <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_19.jpg" alt="" >
-                                    </div>                                
-                                </div>
-                                <div class="image-slider__slide swiper-slide">
-                                    <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_20_.jpg" alt="" >
-                                    </div>                                
-                                </div>
-                                <div class="image-slider__slide swiper-slide">
-                                    <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_21.jpg" alt="" >
-                                    </div>                                
-                                </div>
-                                <div class="image-slider__slide swiper-slide">
-                                    <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_22.jpg" alt="" >
-                                    </div>                                
-                                </div>
-                                <div class="image-slider__slide swiper-slide">
-                                    <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_23.jpg" alt="" >
-                                    </div>                                
-                                </div>
-                                <div class="image-slider__slide swiper-slide">
-                                    <div class="image-slider__image">
-                                        <img src="../assets/pic/04_school/slider/04_24.jpg" alt="" >
-                                    </div>                                
-                                </div>                             
+                                </div>                                                    
                             </div> 
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
@@ -217,9 +167,9 @@
             </div>
         </section>
     </main>
-    <script src="../assets/js/preloader.js"></script> 
-    <script src="../assets/js/burger.js" ></script> 
+    <script src="../../assets/js/preloader.js"></script> 
+    <script src="../../assets/js/burger.js" ></script> 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script> 
-    <script src="../assets/js/project-slider.js" ></script> 
+    <script src="../../assets/js/project-slider.js" ></script> 
 </body>
 </html>
